k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coin-system
  labels:
    name: coin-system
